搓生物转化配方